# NanoCamelid

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE_NOTES.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
benches/: README.md  bench_forward.rs  bench_matmul.rs  bench_q4_dot.rs  bench_q8_dot.rs
config/: nodes.toml
docs/: API.md  CAMELID_PORTING_MAP.md  CLI_CONTRACT.md  HIGH_PERFORMANCE_INFERENCE_WALKTHROUGH.md  MODEL_CATALOG.md  PI_PORTING.md  PRODUCT_HISTORY.md  QWEN3.6_TEST_WALKTHROUGH.md  RELEASE_PROCESS.md  SERVICE_MODE.md  SUPPORT_MATRIX.md
docs/bench/: CAPABILITY_TABLE.md  PROMPTS.md  phase0_baseline.md  phase2_spec_decode.md  phase3_pp_speculation.md  phase4_tp_smoke.md  phase4_tp_wire.md  phi3_fused_qkv.md  q4k_q5k_neon.md  qk_norm_fix.md
examples/: cluster.toml  dump_tensor_types.rs
scripts/: deploy.sh  install-systemd-user-service.sh  install.sh  launch_cluster.sh  package-release.sh  release-preflight.sh  remote_build.sh  stop_cluster.sh  validate.sh
scripts/pi/: bench-1b-prefill.sh  bootstrap.sh  chat-1b.sh  chat-3b.sh  common.sh  context-pack-1b.sh  evidence-1b.sh  mixtral-cluster.sh  model-1b.sh  ready-1b.sh  smoke-1b.sh  smoke-3b.sh  strand-cluster.sh
scripts/systemd/: README.md  nanocamelid-stage-node1.service  nanocamelid-stage-node2.service
src/: cluster.rs  cluster_up.rs  gguf.rs  inference.rs  lib.rs  main.rs  model.rs  q4.rs  q8.rs  runtime.rs  speculative.rs  tokenizer.rs  tp.rs
src/distributed/: client.rs  config.rs  frame.rs  mod.rs  node.rs
tests/: pipeline_equivalence.rs
webui/: index.html
webui/assets/: AnalyticsView-4hKUy-8M.js  ApiView-BmWT68_q.js  Chip-DSXAqNUo.js  ClusterView-DQH4Z7Xt.js  CompatibilityView-BtI0tt6e.js  EmptyState-BMNPEXCO.js  Field-3EOpUhAb.js  HistoryView-CkJ3AY0C.js  InferenceObservatoryView-BMSmEQ5Z.js  MemoryView-PxUB8xtn.js  ModelsView-BxXnsjUn.js  SettingsView-B0XICOuH.js  SystemView-CgcgPuOO.js  (+5 more)
